# scientific-ml-autoresearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: architecture.md  extending.md  index.html  roadmap.md  task-format.md
docs/workflow-ui/: app.js  index.html  sample-state.json  styles.css
examples/advection/: README.md  evaluate.py  evaluate_shifted.py  task.yaml  train.py
examples/advection/configs/: base.yaml
examples/burgers/: README.md  evaluate.py  task.yaml  train.py
examples/burgers/configs/: base.yaml
promo/: make_xhs_cover.py  make_xhs_cover_rednote.py  make_xhs_detail.py  make_xhs_poster.py  xhs_caption.md  xhs_cover_rednote_style.md  xhs_design_philosophy.md  xhs_short_caption.md
src/autoresearch/: cli.py  evidence.py  llm.py  loop.py  planner.py  runner.py  schemas.py  storage.py  suggester.py  summarizer.py  utils.py
tests/: test_branch_budget.py  test_bundle_planner.py  test_cli_status.py  test_evidence.py  test_evidence_driven_planner.py  test_evidence_gap_targeting.py  test_evidence_gaps.py  test_evidence_guidance_structure.py  test_evidence_loop_integration.py  test_evidence_state_storage.py  test_history_aware_planner.py  test_loop.py  test_partial_bundle_completion.py  test_planner.py  test_resume_recovery.py  test_runner_bundle.py  test_runner_checks.py  test_schemas.py  test_schemas_extended.py  test_storage.py  test_suggester.py  test_summary.py
